fix: projects section grid gaps

--- a/src/scss/modules/projects.scss
+++ b/src/scss/modules/projects.scss
@@ -36,7 +36,7 @@
     @media screen and (min-width: 960px) {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      grid-gap: 0px 24px;
+      grid-gap: 24px;
       // align-items:inherit;
       }
   }
@@ -158,7 +158,7 @@
   @media screen and (min-width: 960px) {
     width: 100%;
     min-height: 324px;
-
+    margin: 0px;
     font-size: 16px;
 line-height: 1.5em;
   }
